# ACQ_Processor

./: .gitignore  CMakeLists.txt  README.md
cpp/inc/backend/: ACQDataLoader.h  DSPFilters.h  DataAnalyzer.h  SignalProcessor.h
cpp/inc/controllers/: ApplicationController.h  ChartController.h  DataController.h  FilterController.h  LabelManager.h
cpp/inc/models/: ACQMetadata.h  ChannelData.h  SegmentLabel.h
cpp/src/: main.cpp  test_filters.cpp
cpp/src/backend/: ACQDataLoader.cpp  DSPFilters.cpp  DataAnalyzer.cpp  SignalProcessor.cpp
cpp/src/controllers/: ApplicationController.cpp  ChartController.cpp  DataController.cpp  FilterController.cpp  LabelManager.cpp
cpp/src/models/: ACQMetadata.cpp  ChannelData.cpp  SegmentLabel.cpp
python/: batch_acq_converter.py
qml/: AdvancedFilterPanel.qml  ChartView.qml  DataViewer.qml  FileSelector.qml  FilterDesignWindow.qml  FilterPanel.qml  LabelOverlay.qml  LabelingTools.qml  MainWindow.qml  WaveformView.qml  main.qml  qml.qrc
